small edits and adds more to responsibility section

--- a/docs/StoryFinalReport/StoryFinalReport.tex
+++ b/docs/StoryFinalReport/StoryFinalReport.tex
@@ -27,7 +27,7 @@
 % PROJECT SUMMARY
 %-------------------------------------------------------------------------------------------------------------
 \section{Project Summary}
-The Story Creator module is used to combine the Sharing Framework, Object Creator, Visual Editor and Animation module in order to create a holistic view of Edith in a dynamic webpage. \\
+The Story Creator module combines the Sharing Framework, Object Creator, Visual Editor and Animation modules in order to create a holistic view of Edith in a dynamic webpage. \\
 
 The Story Creator will be directed to a login page that will prompt them for their username and password.  If they do not have an account they may create one in the link that says "Create Account."  In the case that they have already have an account they will be directed to the main Edith page where they will be able to create a "story." To do this they will click on objects(this makes them glow and puts them into an array for Visual Editor), give the objects animations by manipulating the selected object in the Visual Editor canvas, and create ways to interact with their story by manipulating other objects. By doing this, students will be able to learn how relationships among objects work in programming. \\
 
@@ -40,13 +40,17 @@ The Story Creator Module designed the Edith main page, login page, and sign up p
 \section{Development Procedures}
 In order to complete Edith the Story Creator module followed the iterative, extreme programming, and the Boehm spiral model.  We initially used the Boehm spiral by determining our objectives,identifying risks, testing, and planning our next cycle.  We found quickly that this was not the most applicable because of the amount of changing requirements which forced us to throw away old code.  It transformed into an iterative model because we discovered that we had to repeatedly redo our entire module do to changing requirements and specifications from other groups and the project as a whole.  As deadlines drew near we found ourselves switching to the extreme programming model in order to solve issues/bugs and to complete large functions of the project as a whole.  \\
 
-We began with the functionality of receiving JSON objects, adding a time to them, and passing them on to other groups.  We also added the functionality to set a time to wait for a function (this was later transferred to Animation).  Later our requirements changed completely and we began creating the base view for the entire project.  We worked on incorporating the Visual Editor canvas into the main page, setup a main canvas, creating dummy buttons for different functionality, and the canvas for viewing objects.  From there we worked on design for the login page, main page, and the registration page.  We then worked on getting the Ajax calls up and working with the Sharing Framework.  We assisted the Object Creator and Sharing Framework modules with saving and loading from the database as well as setting up the save and load for the entire project.  We worked on connecting the various elements from the main page with the groups that they corresponded to.  This included loading data from the database and displaying it on the object canvas.  \\
+We began with the functionality of receiving JSON objects, adding a time to them, and passing them on to other groups.  We also added the functionality to set a time to wait for a function (this was later transferred to Animation).  Later our requirements changed completely and we began creating the base webpage view for the entire project.  Then, we worked on incorporating the Visual Editor canvas into the main page, setup a main canvas, creating dummy buttons for different functionality, and the canvas for viewing objects.  From there we worked on design for the login page, main page, and the registration page.  We then worked on getting the Ajax calls up and working with the Sharing Framework.  We assisted the Object Creator and Sharing Framework modules with saving and loading from the database as well as setting up the save and load for the entire project.  We worked on connecting the various elements from the main page with the groups that they corresponded to.  This included loading data from the database and displaying it on the object canvas.  \\
 
 Our process was effective at developing functioning software but very ineffective because we created software that was never used or even thrown away.  We mostly implemented console log testing and used JSHint.  Our program works because the main page displays all canvases as well as allowing the other modules to function correctly on them.  The object panel at the bottom of the screen also displays the objects correctly.  Console log testing was effective for showing us how the page interprets the information that we were displaying.  JSHint was effective at showing us syntax errors in our code.  At times console log testing was ineffective at pointing out why our code was not functioning.  \\
 
-Nate was mainly responsible for main page javascript design. He also worked on general debugging as well as the tutorial for the system.
+The following responsibilities are based on the components of the final product: \\
 
-Brandon was responsible for helping the Object Creator module and Sharing Framework gain access to the database with javascript.  This included writing load and save functions for the main page that sent and retrieved data.  Brandon was also in charge of porting the Visual Editor code and the Object Creator code so that it would function on the main page.  Finally Brandon was in charge of loading data from the database in order to draw objects on the object canvas that were clickable.  
+Nate was responsible for how the various canvases were drawn on the Edith main page as well as their relative sizes to the window. He implemented the canvas' resizing capability whenever the webpage window is resized. He also worked on various bug fixes, clean-up of antiquated code, and implementation of many small functionalities (ie. button method calls). He helped implement the functionality of getting objects from the object creation page into the object canvas below the main canvas. He then wrote and implemented the tutorial on the webpage. \\
+
+Brandon was responsible for helping the Object Creator module and Sharing Framework gain access to the database with javascript.  This included writing load and save functions for the main page that sent and retrieved data.  Brandon was also in charge of porting the Visual Editor code and the Object Creator code so that it would function on the main page.  Finally Brandon was in charge of loading data from the database in order to draw objects on the object canvas that were clickable.  \\
+
+
 
 %-------------------------------------------------------------------------------------------------------------
 % REQUIREMENTS EVALUATION
@@ -71,6 +75,8 @@ Edith was a challenge from start to finish.  I believe that the most voluminous 
 I also encountered many issues with retrieving objects(sprites) from the database and displaying them inside the object panel.  I will take some very useful database debugging and a much better knowledge of Ajax with me.  I have also learned a great deal about databases and php as well as javascript.  These three things together will be very useful in the future because of how prevalent they are in the field of web development and computer science. \\
 
 In order to complete the project I originally attempted to implement the use cases in my requirements document.  That quickly became outdated so I started to use the "adapter" design patter to try and piece together the other groups software.  If restarting on this project I would attempt to have a long session with other groups to go through what they planned on doing and how we could put it together.  A large problem was that many pieces could not be put together in the way that individual groups  had originally designed.  If I were to continue on this project I would add functionality to actually work.
+
+\subsection{Nate Olderman}
 
 
 %-------------------------------------------------------------------------------------------------------------
