--- a/docs/StoryFinalReport/StoryFinalReport.tex
+++ b/docs/StoryFinalReport/StoryFinalReport.tex
@@ -1,3 +1,4 @@
+
 %@author Brandon Roberts, Nate Olderman, Billy Rathje, DJ Maguddayao, Kyle Dybdal
 %@date 9/23/13
 
@@ -44,6 +45,12 @@ We began with the functionality of receiving JSON objects, adding a time to them
 
 Our process was effective at developing functioning software but very ineffective because we created software that was never used or even thrown away.  We mostly implemented console log testing and used JSHint.  Our program works because the main page displays all canvases as well as allowing the other modules to function correctly on them.  The object panel at the bottom of the screen also displays the objects correctly.  Console log testing was effective for showing us how the page interprets the information that we were displaying.  JSHint was effective at showing us syntax errors in our code.  At times console log testing was ineffective at pointing out why our code was not functioning.  \\
 
+Because of how collaborative our process model was, we also made frequent use of pair programming. We did the majority of programming together as a group, and while individuals often wrote sections of code, we would each look at each others’ code either as it was being written or immediately after. This helped both to catch bugs and to ensure that everybody understood the entire code base. \\
+
+We did both formal testing and informal testing throughout the process of putting together the project. Formal testing involved static analysis and unit tests designed by another group. These helped resolve bugs, but our project specifications changed drastically after testing, so we employed frequent informal testing as an adjunct. This formal testing involved printing and manually interrogating the state of all data structures we produced. Because story creator passes data to multiple teams, ensuring that data structures such as the array that holds highlighted objects are working correctly is imperative. We typically investigated the state of these data structures with multiple conditions (often looking closely at boundary conditions like zero items, several items, one items) to ensure that they worked correctly. However, since the majority of our work involved designing the central website, the vast majority of testing involved simply viewing the website to make sure that it displayed properly. There is no direct way to test, for example, whether object images fail to load except through manual investigation. We frequently examined our interface carefully and by hand to ensure it displayed well, looked to the browser debug console for hidden (or sometimes clear) errors, and tested the website in several browsers and configurations (relatively simple because we all use different browser configurations) to ensure that the implementation was robust. \\
+
+
+
 The following responsibilities are based on the components of the final product: \\
 
 Nate was responsible for how the various canvases were drawn on the Edith main page as well as their relative sizes to the window. He implemented the canvas' resizing capability whenever the webpage window is resized. He also worked on various bug fixes, clean-up of antiquated code, and implementation of many small functionalities (ie. button method calls). He helped implement the functionality of getting objects from the object creation page into the object canvas below the main canvas. He then wrote and implemented the tutorial on the webpage. \\
@@ -70,13 +77,20 @@ This was a very helpful requirement because it allows a previous story to be loa
 \item "Close a story" -  The user selects an option to close the story.  The story is removed from the story editor and animations, scripts, and objects associated with the story are cleared from their respective editors.\
 The ability to close a story is not an option.  This requirement seemed unnecessary because the story teller can load a separate story without closing an old one.  At the end of the process closing a story did not seem very important.
 
-\item "Create an object" - Storyteller will go to the Object Creator screen. Storyteller will select an option to create an object.  Storyteller will use the mouse to drag the object. Storyteller will choose where to place the object. Storyteller will drop the object in that place.\
-
+\item "Create an object" - Storyteller will go to the Object Creator screen. Storyteller will select an option to create an object.  Storyteller will use the mouse to drag the object. Storyteller will choose where to place the object. Storyteller will drop the object in that place.\ The ability to create objects and add them to the scene is fundamental to making edith a functioning visual programming system. As a result, this requirement was very important, although it would have been helpful to split it into two requirements, one for making objects and one for adding objects, since these both ended up being complicated functions designed by different teams. The final implementation worked such that an object was created in the object creation window designed by the Object team. When finished, this was uploaded to the server and added to the object browser through an ajax call to the server from the main page designed by the Story Creation team. Adding objects to the canvas is done programmatically within the code made by the Visual Editor team. In the visual editor panel is a function addObject() which adds an object to the animation window. As a result, there was no need to use a drag and drop interface to move objects to the canvas. The Visual Editing team decided on this option in order to allow objects to be added as part of an animation; with the drag-and-drop approach, objects would have had to be present at the start of the animation to appear in the story.
 
 \item "Remove an object" - selects an option to delete objects. User selects the object to delete. The object disappears  from the scene.
+\ This function is not present in the final implementation. It was originally intended to be used with the previous functional requirement so that if an object was dragged onto the animation canvas it could be removed from the canvas. Since objects are no longer dragged onto the canvas, there is no need for a remove feature. This functional requirement would have been useful had we kept the old implementation, but it is no longer necessary. If we had broken up the previous functional requirement into two functional requirements, we might have been able to decrease the ambiguity surrounding what it means to "remove" an object. We do not need a feature to remove objects from the animation canvas, but removing objects from the object browser might have been a nice feature. If we had decoupled the previous requirement into create an object and add an object to scene, we might have thought to have added functional requirements for remove object and  remove object from scene. "Remove object" may have been a nice feature for the final implementation.
+
 \item "Move an object" - User selects an option to move objects. User drags the object from its original location to a new one. (This is not an animation)
+\ Since the ability to drag and drop objects (see last two requirements) is no longer part of the final implementation, there was no need to implement the "move an object" functional requirement. It would have been used to position objects using drag-and-drop on the animation canvas. Instead, this functionality is handled via parameters in the Visual Editor's addObject() function. This approach is similar, and is probably better for teaching users early on how to program using function parameters. The old requirement would have been useful, however, had we kept the drag-and-drop approach.
+
 \item "Develop or edit a script" - Storyteller interacts with the visual editor to develop a new script. Storyteller selects a specific action which is an individual script (All of the scripts interact a main loop).
+\ The ability to develop or edit a script is central to the final version of Edith. Creating an animation centers around using the visual editor to develop scripts that animate objects as well as a main method that calls these scripts. This requirement was met. The Visual Editing team developed a visual programming interface for writing functions, loops, conditionals, and program logic which can be combined together into scripts. The Visual Editor assigns scripts to objects that are highlighted in the object panel designed by the Story Creation team; if no object is highlighted, the script is not used for any particular object (like a global/scene wide function) or is part of the main method. The implementation of this requirement changed somewhat over time. Initially the Story Creation team was going to assign time values to functions made in the Visual Editor, but timing is so essential to visual editor functions and scripts that Visual Editor incorporated timing parameters into the Visual Editor interface.
+
 \item "Delete a script" - User interacts with the visual editor to delete a script.
+\ In the final version of Edith there is no ability to delete a full script since there is no interface displaying full scripts. However, this functional requirement can be achieved; a user could interact with teh visual editor to delete all the code for a single object or for an entire story, then save the story to record the deletions. There are options to delete functions and other program logic from the Visual Editor panel. This is done simply by dragging function/logic/programming blocks out of the right half of the panel. The functional requirement was useful because the functionality it proposes is present in the final version of Edith. However, it may have been better in retrospect to have used a finer level of granularity in descrbing the functionality and discussed deleting individual logic/object/functions.
+
 \item "Save an object or script" - The user wants to save an object or script for reuse. A representation of the object or script is saved.
 \item "Animate an object" -  User selects a script from the visual editor. User drags or otherwise attaches the script to an object in the scene.
 \item "Play story" - Storyteller selects a "play scene" option. The story plays for the storyteller in the animation viewer at the beginning.
