--- a/docs/StoryFinalReport/StoryFinalReport.tex
+++ b/docs/StoryFinalReport/StoryFinalReport.tex
@@ -57,6 +57,9 @@ Nate was responsible for how the various canvases were drawn on the Edith main p
 
 Brandon was responsible for helping the Object Creator module and Sharing Framework gain access to the database with javascript.  This included writing load and save functions for the main page that sent and retrieved data.  Brandon was also in charge of porting the Visual Editor code and the Object Creator code so that it would function on the main page.  Finally Brandon was in charge of loading data from the database in order to draw objects on the object canvas that were clickable.  \\
 
+Billy was responsible for designing, styling, and implementing the object browser panel. He wrote the code for displaying objects in a grid, adding objects individually and from an array, and for sizing/positioning objects. He also worked on CSS styling for the object panel. He implemented a Kinetic JS canvas so that the panel could display objects. He also implemented the "glow" or highlighting functionality which highlights objects and places highlighted objects in an array that the Visual Editor accesses through an accessor method. He worked on some of the data retrieval code (particularly for displaying objects designed in the Object Creation panel) as well as server setup/testing. He also contributed to some of the page layout/design.
+
+\\
 
 
 %-------------------------------------------------------------------------------------------------------------
