--- a/docs/StoryFinalReport/StoryFinalReport.tex
+++ b/docs/StoryFinalReport/StoryFinalReport.tex
@@ -50,6 +50,9 @@ Nate was responsible for how the various canvases were drawn on the Edith main p
 
 Brandon was responsible for helping the Object Creator module and Sharing Framework gain access to the database with javascript.  This included writing load and save functions for the main page that sent and retrieved data.  Brandon was also in charge of porting the Visual Editor code and the Object Creator code so that it would function on the main page.  Finally Brandon was in charge of loading data from the database in order to draw objects on the object canvas that were clickable.  \\
 
+Kyle was responsible for much of the design of the website. This process started with making a website mockup, and then designing a logo and color scheme. Lots of work was done with HTML and CSS, putting together the general layout of the page. The goal of the design was to be minimalist and out of the way, keeping as clean of a workspace as possible. He also created the login and registration page.
+
+
 
 
 %-------------------------------------------------------------------------------------------------------------
@@ -77,10 +80,17 @@ The ability to close a story is not an option.  This requirement seemed unnecess
 \item "Move an object" - User selects an option to move objects. User drags the object from its original location to a new one. (This is not an animation)
 \item "Develop or edit a script" - Storyteller interacts with the visual editor to develop a new script. Storyteller selects a specific action which is an individual script (All of the scripts interact a main loop).
 \item "Delete a script" - User interacts with the visual editor to delete a script.
-\item "Save an object or script" - The user wants to save an object or script for reuse. A representation of the object or script is saved.
-\item "Animate an object" -  User selects a script from the visual editor. User drags or otherwise attaches the script to an object in the scene.
-\item "Play story" - Storyteller selects a "play scene" option. The story plays for the storyteller in the animation viewer at the beginning.
+
+\item "Save an object or script" - The user wants to save an object or script for reuse. A representation of the object or script is saved.\
+We were able to save objects for reuse by having js functions "grab" the object exported by the Object Creator module. We did not implement saving of scripts individually; scripts must be produced on the fly for each new project. However, this appears to be something that would fall under Visual Editor's responsibilities rather than our own.
+
+\item "Animate an object" -  User selects a script from the visual editor. User drags or otherwise attaches the script to an object in the scene.\
+This requirement changed over time due to changes in the interaction with and responsibilities of the Visual Editor module. Animation was achieved by having standard functions that apply to all objects that take the target object as a parameter. The Storyteller can highlight multiple objects for a function in the visual editor to act upon.
+
+\item "Play story" - Storyteller selects a "play scene" option. The story plays for the storyteller in the animation viewer at the beginning.\
+%Can we play a story yet?%
 \item "Share a story" - User selects a "publish story option." The story is converted to a representation that the sharing framework can read. The story representation is sent to the sharing framework so that it can share the scene.
+This was achieved through the use of ajax communicating with the PHP on the server set up by the sharing team. The project is saved as a JSON object, which can then be loaded again.
 \end{itemize}
 
 \subsection{Non-Functional Requirements}
@@ -108,7 +118,8 @@ In order to complete the project I originally attempted to implement the use cas
 
 \subsection{Nate Olderman}
 
-
+\subsection{Kyle Dybdal}
+Edith was a lesson in communication, patience, and flexibility. How we initially assumed the final project to work ended up being very different from what the website ended up being. 
 %-------------------------------------------------------------------------------------------------------------
 % GLOSSARY AND REFERENCES 
 %-------------------------------------------------------------------------------------------------------------
